--- a/client/src/assets/styles/app.css
+++ b/client/src/assets/styles/app.css
@@ -33,6 +33,12 @@ h1 {
     font-weight: 800;
 }
 
+.CS2Title {
+    color: aliceblue;
+    max-width: none;
+    padding: 30px 40px;
+}
+
 .highlight {
     background-image: linear-gradient(135deg, #ff25e2 0%, #5010e6 100%);
     -webkit-background-clip: text;
@@ -71,7 +77,15 @@ h1 {
 
 #contentS2 {
     display: flex;
-    flex-flow: row wrap;
+    justify-content: center;
+    flex-flow: column wrap;
     min-height: 100vh;
-    background-image: linear-gradient(135deg, #ff25e2 0%, #5010e6);
+    background-image: linear-gradient(135deg, #8a117a 0%, #370b9d);
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-flow: row wrap;
 }
