--- a/client/src/assets/styles/HomePage.css
+++ b/client/src/assets/styles/HomePage.css
@@ -35,8 +35,8 @@ h1 {
 
 .highlight {
     background-image: linear-gradient(135deg, #ff25e2 0%, #5010e6 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
 }
 
 .p-desc {
